--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   get_it: ^7.6.7
   just_audio: ^0.9.36
   # on_audio_query: ^2.9.0
+  path_provider: ^2.1.2
   permission_handler: ^11.0.1
   shared_preferences: ^2.2.2
   sqflite: ^2.3.2
